Share buttons and notes.

--- a/literacy/basebank.html
+++ b/literacy/basebank.html
@@ -6,7 +6,6 @@
     <meta charset="utf-8" />
     <link rel="canonical" href="/literacy/basebank" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css" />
     <link rel="stylesheet" href="/style.css" />
     <link href="/feed.atom.xml" type="application/atom+xml" rel="alternate" title="Житейские воззрения пана Семушельского Atom Feed" />
         <meta name="description" content="В чём роль и важность базового банка? Как его правильно выбирать?" />
@@ -36,7 +35,7 @@
                 <ul class="menu">
                         <li class="pure-menu-item"><a href="/blog" class="pure-menu-link">Сиюминутное</a></li>
                         <li class="pure-menu-item"><a href="/literacy" class="pure-menu-link">Грамотность</a></li>
-                        <li class="pure-menu-item"><a href="/pages/halava" class="pure-menu-link">Халява</a></li>
+                        <li class="pure-menu-item"><a href="/notes" class="pure-menu-link">Заметки</a></li>
                         <li class="pure-menu-item"><a href="/pages/sources" class="pure-menu-link">Источники</a></li>
                         <li class="pure-menu-item"><a href="/calculators" class="pure-menu-link">Калькуляторы</a></li>
                 </ul>
@@ -53,7 +52,7 @@
             <h1>Выбор базового банка</h1>
             <div class="meta">
                     <p class="description">В чём роль и важность базового банка? Как его правильно выбирать?</p>
-                        <p> Обновлено: 2019-10-14 </p>
+                        <p> Обновлено: <time>2019-10-14</time> </p>
             </div>
         </header>
 
@@ -66,6 +65,15 @@
 <p>Разумеется, базовое обслуживание в базовом банке должно быть бесплатным <em>для вас</em>. Необязательно вышеперечисленное будет бесплатным в основных тарифах. Банки обычно предлагают некоторые свои сервисы бесплатно тем, кто получает з/п на карту этого банка или открыл в нём крупный вклад. Платные тарифы (обычно прилагаются к карточкам разной степени премиальности) тоже не надо сбрасывать со счетов: возможно, плюшки по этим тарифам (например, повышенный кэшбэк или туристическая страховка) принесут денег больше, чем стоит его обслживание; но базовое обслуживание в расчёте этой экономии учитывать нельзя — оно должно быть бесплатным безусловно.</p>
 <p>Если базовый банк выполняет лишь функции <em>диспетчера оперативного резерва</em>, то особенных требований к его надёжности нет. Однако если вы выбрали на эту роль сомнительный банк, то разумно найти ещё один, удовлетворяющий требованиям базовости, и размесить часть резервов там.</p>
         </div>
+        <aside>
+                <div class="share-buttons">
+        <a href="https://vk.com/share.php?url=https://onfin.github.io/literacy/basebank&title=Выбор базового банка&description=В чём роль и важность базового банка? Как его правильно выбирать?" target="_blank"><i class="share">&#xea9d;</i></a>
+        <a href="https://telegram.me/share/url?url=https://onfin.github.io/literacy/basebank" target="_blank"><i class="share">&#xea9b;</i></a>
+        <a href="https://twitter.com/intent/tweet?text=https://onfin.github.io/literacy/basebank" target="_blank"><i class="share">&#xea9c;</i></a>
+        <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/literacy/basebank" target="_blank"><i class="share">&#xea93;</i></a>
+    </div>
+
+        </aside>
     </article>
 </div>
 </div>
@@ -76,11 +84,13 @@
 <div class="pagination pure-u-1 pure-u-lg-9-12">
     <div class="pure-g">
     <div class="pure-u-1-3 left">
+                <a href="/literacy/howto"> &lt;&lt; Пенсия своими силами. Пошаговое руководство </a>
     </div>
     <div class="pure-u-1-3 center">
                 <a href="/literacy"> &uarr; Грамотность &uarr; </a>
     </div>
     <div class="pure-u-1-3 right">
+                <a href="/literacy/cardscalc"> Использование и расчёт банковских карт &gt;&gt; </a>
     </div>
     </div>
 </div>
