--- a/literacy/cardscalc.html
+++ b/literacy/cardscalc.html
@@ -6,7 +6,6 @@
     <meta charset="utf-8" />
     <link rel="canonical" href="/literacy/cardscalc" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css" />
     <link rel="stylesheet" href="/style.css" />
     <link href="/feed.atom.xml" type="application/atom+xml" rel="alternate" title="Житейские воззрения пана Семушельского Atom Feed" />
         <meta name="description" content="Выгоды и опасности банковских карт. Как правильно выбрать и использовать банковскую карту. Стратегия набора веера карт. Расчёт выгоды от использования дебетовых и кредитных карт." />
@@ -36,7 +35,7 @@
                 <ul class="menu">
                         <li class="pure-menu-item"><a href="/blog" class="pure-menu-link">Сиюминутное</a></li>
                         <li class="pure-menu-item"><a href="/literacy" class="pure-menu-link">Грамотность</a></li>
-                        <li class="pure-menu-item"><a href="/pages/halava" class="pure-menu-link">Халява</a></li>
+                        <li class="pure-menu-item"><a href="/notes" class="pure-menu-link">Заметки</a></li>
                         <li class="pure-menu-item"><a href="/pages/sources" class="pure-menu-link">Источники</a></li>
                         <li class="pure-menu-item"><a href="/calculators" class="pure-menu-link">Калькуляторы</a></li>
                 </ul>
@@ -53,7 +52,7 @@
             <h1>Использование и расчёт банковских карт</h1>
             <div class="meta">
                     <p class="description">Выгоды и опасности банковских карт. Как правильно выбрать и использовать банковскую карту. Стратегия набора веера карт. Расчёт выгоды от использования дебетовых и кредитных карт.</p>
-                        <p> Обновлено: 2019-10-14 </p>
+                        <p> Обновлено: <time>2019-10-14</time> </p>
             </div>
         </header>
 
@@ -243,6 +242,15 @@
 <p>Бесплатные дебетовые карты могут вполне себе и лежать на полке, ожидая своего часа. Бесплатные кредитки с небольшими лимитами — тоже. Только отслеживайте акутуальные условия по ним, вдруг они перестанут быть бесплатными. Платные карты и кредитки со значительными лимитами, если становятся не нужны, лучше закрывать.</p>
 <p>Единственный способ закрыть карту — написать в банке соответствующее заявление (и лучше взять с собой подтверждающий документ). Ни оставление карты на полке, ни даже её блокировка не прекращают обслуживание банком счёта карты (блокировка действует только на стороне платёжной системы). Соответственно, все лимиты будут открытыми, а комиссии — списываться (возможно, в долг или овердрафт под проценты).</p>
         </div>
+        <aside>
+                <div class="share-buttons">
+        <a href="https://vk.com/share.php?url=https://onfin.github.io/literacy/cardscalc&title=Использование и расчёт банковских карт&description=Выгоды и опасности банковских карт. Как правильно выбрать и использовать банковскую карту. Стратегия набора веера карт. Расчёт выгоды от использования дебетовых и кредитных карт." target="_blank"><i class="share">&#xea9d;</i></a>
+        <a href="https://telegram.me/share/url?url=https://onfin.github.io/literacy/cardscalc" target="_blank"><i class="share">&#xea9b;</i></a>
+        <a href="https://twitter.com/intent/tweet?text=https://onfin.github.io/literacy/cardscalc" target="_blank"><i class="share">&#xea9c;</i></a>
+        <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/literacy/cardscalc" target="_blank"><i class="share">&#xea93;</i></a>
+    </div>
+
+        </aside>
     </article>
 </div>
 </div>
@@ -253,11 +261,13 @@
 <div class="pagination pure-u-1 pure-u-lg-9-12">
     <div class="pure-g">
     <div class="pure-u-1-3 left">
+                <a href="/literacy/basebank"> &lt;&lt; Выбор базового банка </a>
     </div>
     <div class="pure-u-1-3 center">
                 <a href="/literacy"> &uarr; Грамотность &uarr; </a>
     </div>
     <div class="pure-u-1-3 right">
+                <a href="/literacy/credits"> Математика кредитов &gt;&gt; </a>
     </div>
     </div>
 </div>
