--- a/literacy/index.html
+++ b/literacy/index.html
@@ -6,19 +6,18 @@
     <meta charset="utf-8" />
     <link rel="canonical" href="/literacy" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css" />
     <link rel="stylesheet" href="/style.css" />
     <link href="/feed.atom.xml" type="application/atom+xml" rel="alternate" title="Житейские воззрения пана Семушельского Atom Feed" />
-        <meta name="description" content="Заметки по финансовой грамотности в систематическом виде." />
+        <meta name="description" content="Циклы статей о финансовой грамотности" />
         <meta name="keywords" content="финансовая грамотность, сбережения, инвестиции" />
 
 <meta property="og:locale" content="ru" />
 
-    <meta property="og:description" content="Заметки по финансовой грамотности в систематическом виде." />
+    <meta property="og:description" content="Циклы статей о финансовой грамотности" />
 
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2018-12-01" />
-        <meta property="og:article:modified_time" content="2019-10-14" />
+        <meta property="og:article:modified_time" content="2019-10-16" />
 <meta property="og:title" content="Грамотность" />
 <meta property="og:url" content="https://onfin.github.io/literacy" />
 
@@ -36,7 +35,7 @@
                 <ul class="menu">
                         <li class="pure-menu-item"><a href="/blog" class="pure-menu-link">Сиюминутное</a></li>
                         <li class="pure-menu-item"><a href="/literacy" class="pure-menu-link">Грамотность</a></li>
-                        <li class="pure-menu-item"><a href="/pages/halava" class="pure-menu-link">Халява</a></li>
+                        <li class="pure-menu-item"><a href="/notes" class="pure-menu-link">Заметки</a></li>
                         <li class="pure-menu-item"><a href="/pages/sources" class="pure-menu-link">Источники</a></li>
                         <li class="pure-menu-item"><a href="/calculators" class="pure-menu-link">Калькуляторы</a></li>
                 </ul>
@@ -52,7 +51,7 @@
         <header>
             <h1>Грамотность</h1>
             <div class="meta">
-                    <p class="description">Заметки по финансовой грамотности в систематическом виде.</p>
+                    <p class="description">Циклы статей о финансовой грамотности</p>
             </div>
         </header>
 
@@ -75,9 +74,18 @@
 <li><a href="/literacy/moneytransfer">Денежные переводы</a></li>
 <li><a href="/literacy/deposits">Размещение средств в банках</a></li>
 <li><a href="/literacy/cards">Банковские карты</a></li>
-<li><a href="/literacy/instruments">Краткий обзор инструментов сбережения. Во вкладывать деньги и во что — нет</a></li>
+<li><a href="/literacy/instruments">Краткий обзор инструментов сбережения. Сколько и во что вкладывать</a></li>
 </ol>
         </div>
+        <aside>
+                <div class="share-buttons">
+        <a href="https://vk.com/share.php?url=https://onfin.github.io/literacy&title=Грамотность&description=Циклы статей о финансовой грамотности" target="_blank"><i class="share">&#xea9d;</i></a>
+        <a href="https://telegram.me/share/url?url=https://onfin.github.io/literacy" target="_blank"><i class="share">&#xea9b;</i></a>
+        <a href="https://twitter.com/intent/tweet?text=https://onfin.github.io/literacy" target="_blank"><i class="share">&#xea9c;</i></a>
+        <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/literacy" target="_blank"><i class="share">&#xea93;</i></a>
+    </div>
+
+        </aside>
     </article>
 </div>
 </div>
