--- a/literacy/intro.html
+++ b/literacy/intro.html
@@ -6,7 +6,6 @@
     <meta charset="utf-8" />
     <link rel="canonical" href="/literacy/intro" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css" />
     <link rel="stylesheet" href="/style.css" />
     <link href="/feed.atom.xml" type="application/atom+xml" rel="alternate" title="Житейские воззрения пана Семушельского Atom Feed" />
         <meta name="description" content="Для кого этот сайт. Зачем нужно накапливать финансовый капитал. Историческая доходность акций. Расчёт итоговой доходности разового вложения, регулярных вложений. Сколько нужно сберегать, чтобы получить нужный доход. Через сколько лет можно достичь финансовой независимости." />
@@ -35,7 +34,7 @@
                 }
             };
         </script>
-        <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+        <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"></script>
 
 
 </head>
@@ -49,7 +48,7 @@
                 <ul class="menu">
                         <li class="pure-menu-item"><a href="/blog" class="pure-menu-link">Сиюминутное</a></li>
                         <li class="pure-menu-item"><a href="/literacy" class="pure-menu-link">Грамотность</a></li>
-                        <li class="pure-menu-item"><a href="/pages/halava" class="pure-menu-link">Халява</a></li>
+                        <li class="pure-menu-item"><a href="/notes" class="pure-menu-link">Заметки</a></li>
                         <li class="pure-menu-item"><a href="/pages/sources" class="pure-menu-link">Источники</a></li>
                         <li class="pure-menu-item"><a href="/calculators" class="pure-menu-link">Калькуляторы</a></li>
                 </ul>
@@ -66,7 +65,7 @@
             <h1>Введение</h1>
             <div class="meta">
                     <p class="description">Для кого этот сайт. Зачем нужно накапливать финансовый капитал. Историческая доходность акций. Расчёт итоговой доходности разового вложения, регулярных вложений. Сколько нужно сберегать, чтобы получить нужный доход. Через сколько лет можно достичь финансовой независимости.</p>
-                        <p> Обновлено: 2019-10-14 </p>
+                        <p> Обновлено: <time>2019-10-14</time> </p>
             </div>
         </header>
 
@@ -162,6 +161,15 @@
 <p>А если вы научитесь комфортно жить на <strong>треть</strong> своих трудовых доходов, то всего через 8 лет уже сможете послать работодателя к чертям и заниматься тем, что интересно лично вам (разумеется, не обязательно забесплатно, а может в скорой перспективе и за бо́льшие деньги, чем получали раньше — только это будет вас уже мало заботить; настоящая пенсия она такая должна быть — беззаботная).</p>
 <p>А далее я приглашаю вас перестраивать мозги и учиться благоустраивать свои финансы к скорейшему переходу в это беззаботное состояние.</p>
         </div>
+        <aside>
+                <div class="share-buttons">
+        <a href="https://vk.com/share.php?url=https://onfin.github.io/literacy/intro&title=Введение&description=Для кого этот сайт. Зачем нужно накапливать финансовый капитал. Историческая доходность акций. Расчёт итоговой доходности разового вложения, регулярных вложений. Сколько нужно сберегать, чтобы получить нужный доход. Через сколько лет можно достичь финансовой независимости." target="_blank"><i class="share">&#xea9d;</i></a>
+        <a href="https://telegram.me/share/url?url=https://onfin.github.io/literacy/intro" target="_blank"><i class="share">&#xea9b;</i></a>
+        <a href="https://twitter.com/intent/tweet?text=https://onfin.github.io/literacy/intro" target="_blank"><i class="share">&#xea9c;</i></a>
+        <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/literacy/intro" target="_blank"><i class="share">&#xea93;</i></a>
+    </div>
+
+        </aside>
     </article>
 </div>
 </div>
