--- a/literacy/money_inflation_wages.html
+++ b/literacy/money_inflation_wages.html
@@ -6,7 +6,6 @@
     <meta charset="utf-8" />
     <link rel="canonical" href="/literacy/money_inflation_wages" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css" />
     <link rel="stylesheet" href="/style.css" />
     <link href="/feed.atom.xml" type="application/atom+xml" rel="alternate" title="Житейские воззрения пана Семушельского Atom Feed" />
 
@@ -30,7 +29,7 @@
                 }
             };
         </script>
-        <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+        <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"></script>
 
 
 </head>
@@ -44,7 +43,7 @@
                 <ul class="menu">
                         <li class="pure-menu-item"><a href="/blog" class="pure-menu-link">Сиюминутное</a></li>
                         <li class="pure-menu-item"><a href="/literacy" class="pure-menu-link">Грамотность</a></li>
-                        <li class="pure-menu-item"><a href="/pages/halava" class="pure-menu-link">Халява</a></li>
+                        <li class="pure-menu-item"><a href="/notes" class="pure-menu-link">Заметки</a></li>
                         <li class="pure-menu-item"><a href="/pages/sources" class="pure-menu-link">Источники</a></li>
                         <li class="pure-menu-item"><a href="/calculators" class="pure-menu-link">Калькуляторы</a></li>
                 </ul>
@@ -60,7 +59,7 @@
         <header>
             <h1>Деньги, инфляция и зарплаты</h1>
             <div class="meta">
-                        <p> Обновлено: 2019-10-14 </p>
+                        <p> Обновлено: <time>2019-10-14</time> </p>
             </div>
         </header>
 
@@ -100,6 +99,15 @@ $$ Q_1 \cdot P_1 + Q_2 \cdot P_2 = M \cdot V, $$
 <li>валютные курсы.</li>
 </ul>
         </div>
+        <aside>
+                <div class="share-buttons">
+        <a href="https://vk.com/share.php?url=https://onfin.github.io/literacy/money_inflation_wages&title=Деньги, инфляция и зарплаты&description=" target="_blank"><i class="share">&#xea9d;</i></a>
+        <a href="https://telegram.me/share/url?url=https://onfin.github.io/literacy/money_inflation_wages" target="_blank"><i class="share">&#xea9b;</i></a>
+        <a href="https://twitter.com/intent/tweet?text=https://onfin.github.io/literacy/money_inflation_wages" target="_blank"><i class="share">&#xea9c;</i></a>
+        <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/literacy/money_inflation_wages" target="_blank"><i class="share">&#xea93;</i></a>
+    </div>
+
+        </aside>
     </article>
 </div>
 </div>
