--- a/literacy/reserves.html
+++ b/literacy/reserves.html
@@ -6,7 +6,6 @@
     <meta charset="utf-8" />
     <link rel="canonical" href="/literacy/reserves" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css" />
     <link rel="stylesheet" href="/style.css" />
     <link href="/feed.atom.xml" type="application/atom+xml" rel="alternate" title="Житейские воззрения пана Семушельского Atom Feed" />
         <meta name="description" content="Универсальный подход к управлению личными финансами, планированию и учёту расходов, составлению личного финансового плана и бюджета через работу с резервами. Виды и правила формирования резервов. Как оценить выгоду от страхового полиса. Что выгоднее: страховка или резерв? Как правильно копить на пенсию. Почему полисы инвестиционного и накопительного страхования (ИСЖ, НСЖ) невыгодны почти для всех." />
@@ -36,7 +35,7 @@
                 <ul class="menu">
                         <li class="pure-menu-item"><a href="/blog" class="pure-menu-link">Сиюминутное</a></li>
                         <li class="pure-menu-item"><a href="/literacy" class="pure-menu-link">Грамотность</a></li>
-                        <li class="pure-menu-item"><a href="/pages/halava" class="pure-menu-link">Халява</a></li>
+                        <li class="pure-menu-item"><a href="/notes" class="pure-menu-link">Заметки</a></li>
                         <li class="pure-menu-item"><a href="/pages/sources" class="pure-menu-link">Источники</a></li>
                         <li class="pure-menu-item"><a href="/calculators" class="pure-menu-link">Калькуляторы</a></li>
                 </ul>
@@ -53,7 +52,7 @@
             <h1>Формирование резервов</h1>
             <div class="meta">
                     <p class="description">Универсальный подход к управлению личными финансами, планированию и учёту расходов, составлению личного финансового плана и бюджета через работу с резервами. Виды и правила формирования резервов. Как оценить выгоду от страхового полиса. Что выгоднее: страховка или резерв? Как правильно копить на пенсию. Почему полисы инвестиционного и накопительного страхования (ИСЖ, НСЖ) невыгодны почти для всех.</p>
-                        <p> Обновлено: 2019-10-14 </p>
+                        <p> Обновлено: <time>2019-10-14</time> </p>
             </div>
         </header>
 
@@ -104,6 +103,15 @@
 Почему. Во-первых, за страхование рисков вы всё равно заплатите, причём, скорее всего, дороже обычного рыночного тарифа: т.к. вы не можете ни настроить его параметры, ни увидеть отдельной строкой его стоимость, чтобы сравнить с другими компаниями. Во-вторых, вы заплатите комиссию страховому агенту (такие полисы обычно любят навязывать банки и «финансовые советники»), а это, <a href="http://www.cbr.ru/content/document/file/47303/review_insure_18q1.pdf">по данным ЦБ РФ</a> — больше 20% от взносов. В-третьих, из-за необходимости вернуть строго установленную сумму в указанный срок страховые компании очень сильно ограниченны в выборе инвестиционных инструментов и итоговая доходность едва ли будет превышать инфляцию (но именно доходность сверх инфляции и позволяет за обозримые сроки создать адекватный пенсионный резерв). Ко всему прочему, вам придётся заплатить крупный штраф, если вы потребуете выплатить накопленные деньги не дождавшись прописанного в договоре события. И вы подставляетесь под риск банкротства страховой (который за время действия программы — обычно более пяти лет — довольно вероятен): страхования их обязательств по аналогии с банками у нас нет (кроме ОСАГО), да и сами уплаченные вами по программе страхования деньги безусловным обязательством страховой не являются (в отличие от банковского депозита).</p>
 <p>Эти программы используются обычно для сокрытия денег от судебных приставов в случае имущественных споров и тайной их передачи третьим лицам (именно потому, что уплаченная вами страховая премия — это не ваши деньги и не обязательство страховой перед вами, а ваши траты и доход страховой; обязательство же по выплате у страховой наступит только при страховом случае и только перед теми, кто указан в договоре страхования).</p>
         </div>
+        <aside>
+                <div class="share-buttons">
+        <a href="https://vk.com/share.php?url=https://onfin.github.io/literacy/reserves&title=Формирование резервов&description=Универсальный подход к управлению личными финансами, планированию и учёту расходов, составлению личного финансового плана и бюджета через работу с резервами. Виды и правила формирования резервов. Как оценить выгоду от страхового полиса. Что выгоднее: страховка или резерв? Как правильно копить на пенсию. Почему полисы инвестиционного и накопительного страхования (ИСЖ, НСЖ) невыгодны почти для всех." target="_blank"><i class="share">&#xea9d;</i></a>
+        <a href="https://telegram.me/share/url?url=https://onfin.github.io/literacy/reserves" target="_blank"><i class="share">&#xea9b;</i></a>
+        <a href="https://twitter.com/intent/tweet?text=https://onfin.github.io/literacy/reserves" target="_blank"><i class="share">&#xea9c;</i></a>
+        <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/literacy/reserves" target="_blank"><i class="share">&#xea93;</i></a>
+    </div>
+
+        </aside>
     </article>
 </div>
 </div>
@@ -120,6 +128,7 @@
                 <a href="/literacy"> &uarr; Грамотность &uarr; </a>
     </div>
     <div class="pure-u-1-3 right">
+                <a href="/literacy/howto"> Пенсия своими силами. Пошаговое руководство &gt;&gt; </a>
     </div>
     </div>
 </div>
