--- a/notes/index.html
+++ b/notes/index.html
@@ -2,19 +2,24 @@
 
 <html lang="ru">
 <head>
-    <title>Вести с полей исследований</title>
+    <title>Заметки о финансах</title>
     <meta charset="utf-8" />
-    <link rel="canonical" href="/blog/2018-12-05" />
+    <link rel="canonical" href="/notes" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="/style.css" />
     <link href="/feed.atom.xml" type="application/atom+xml" rel="alternate" title="Житейские воззрения пана Семушельского Atom Feed" />
+        <meta name="description" content="Краткие заметки в систематическом порядке" />
+        <meta name="keywords" content="финансовая грамотность, сбережения, инвестиции" />
 
 <meta property="og:locale" content="ru" />
 
+    <meta property="og:description" content="Краткие заметки в систематическом порядке" />
 
-    <meta property="og:type" content="website" />
-<meta property="og:title" content="Вести с полей исследований" />
-<meta property="og:url" content="https://onfin.github.io/blog/2018-12-05" />
+    <meta property="og:type" content="article" />
+        <meta property="og:article:published_time" content="2019-10-16" />
+        <meta property="og:article:modified_time" content="2019-10-18" />
+<meta property="og:title" content="Заметки о финансах" />
+<meta property="og:url" content="https://onfin.github.io/notes" />
 
 
 
@@ -44,20 +49,26 @@
 <div class="page pure-u-1 pure-u-lg-9-12">
     <article>
         <header>
-            <h1>Вести с полей исследований</h1>
+            <h1>Заметки о финансах</h1>
             <div class="meta">
+                    <p class="description">Краткие заметки в систематическом порядке</p>
             </div>
         </header>
 
         <div class="content">
-            <p>По данным <a href="http://www.econ.yale.edu/~shiller/data.htm">Шиллера</a>, если держать портфель из акций индекса SnP500 с 1968г., то к началу 2018г. максимальная зафиксированная просадка стоимости портфеля составит 63%, а дивидендных выплат по нему — 25%.</p>
+            <h2 id="_1">Обо мне</h2>
+<ol>
+<li><a href="/notes/aboutme">Кто я и как дошёл до жизни такой</a></li>
+<li><a href="/notes/system">Как организованы мои финансы</a></li>
+<li><a href="/notes/referrals">Реферальные ссылки</a></li>
+</ol>
         </div>
         <aside>
                 <div class="share-buttons">
-        <a href="https://vk.com/share.php?url=https://onfin.github.io/blog/2018-12-05&title=Вести с полей исследований&description=" target="_blank"><i class="share">&#xea9d;</i></a>
-        <a href="https://telegram.me/share/url?url=https://onfin.github.io/blog/2018-12-05" target="_blank"><i class="share">&#xea9b;</i></a>
-        <a href="https://twitter.com/intent/tweet?text=https://onfin.github.io/blog/2018-12-05" target="_blank"><i class="share">&#xea9c;</i></a>
-        <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/blog/2018-12-05" target="_blank"><i class="share">&#xea93;</i></a>
+        <a href="https://vk.com/share.php?url=https://onfin.github.io/notes&title=Заметки о финансах&description=Краткие заметки в систематическом порядке" target="_blank"><i class="share">&#xea9d;</i></a>
+        <a href="https://telegram.me/share/url?url=https://onfin.github.io/notes" target="_blank"><i class="share">&#xea9b;</i></a>
+        <a href="https://twitter.com/intent/tweet?text=https://onfin.github.io/notes" target="_blank"><i class="share">&#xea9c;</i></a>
+        <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/notes" target="_blank"><i class="share">&#xea93;</i></a>
     </div>
 
         </aside>
