--- a/calculators/cards.html
+++ b/calculators/cards.html
@@ -6,7 +6,6 @@
     <meta charset="utf-8" />
     <link rel="canonical" href="/calculators/cards" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css" />
     <link rel="stylesheet" href="/style.css" />
     <link href="/feed.atom.xml" type="application/atom+xml" rel="alternate" title="Житейские воззрения пана Семушельского Atom Feed" />
         <meta name="description" content="Калькуляторы для расчёта выгоды, сравнения и выбора банковских карт." />
@@ -18,7 +17,7 @@
 
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2019-10-13" />
-        <meta property="og:article:modified_time" content="2019-10-14" />
+        <meta property="og:article:modified_time" content="2019-10-17" />
 <meta property="og:title" content="Калькуляторы банковских карт" />
 <meta property="og:url" content="https://onfin.github.io/calculators/cards" />
 
@@ -36,7 +35,7 @@
                 <ul class="menu">
                         <li class="pure-menu-item"><a href="/blog" class="pure-menu-link">Сиюминутное</a></li>
                         <li class="pure-menu-item"><a href="/literacy" class="pure-menu-link">Грамотность</a></li>
-                        <li class="pure-menu-item"><a href="/pages/halava" class="pure-menu-link">Халява</a></li>
+                        <li class="pure-menu-item"><a href="/notes" class="pure-menu-link">Заметки</a></li>
                         <li class="pure-menu-item"><a href="/pages/sources" class="pure-menu-link">Источники</a></li>
                         <li class="pure-menu-item"><a href="/calculators" class="pure-menu-link">Калькуляторы</a></li>
                 </ul>
@@ -53,7 +52,7 @@
             <h1>Калькуляторы банковских карт</h1>
             <div class="meta">
                     <p class="description">Калькуляторы для расчёта выгоды, сравнения и выбора банковских карт.</p>
-                        <p> Обновлено: 2019-10-14 </p>
+                        <p> Обновлено: <time>2019-10-17</time> </p>
             </div>
         </header>
 
@@ -239,6 +238,7 @@
       if (!f.trueGrace)
         k /= 2;
       var res = k*f.spending*f.percent/100 + f.spending*12*f.cashback/100 + f.bonus - f.fee;
+
       f.income = res.toFixed(2);
       f.incomePercent = (res/12/f.spending*100).toFixed(2);
 
@@ -248,6 +248,15 @@
   )
 </script>
         </div>
+        <aside>
+                <div class="share-buttons">
+        <a href="https://vk.com/share.php?url=https://onfin.github.io/calculators/cards&title=Калькуляторы банковских карт&description=Калькуляторы для расчёта выгоды, сравнения и выбора банковских карт." target="_blank"><i class="share">&#xea9d;</i></a>
+        <a href="https://telegram.me/share/url?url=https://onfin.github.io/calculators/cards" target="_blank"><i class="share">&#xea9b;</i></a>
+        <a href="https://twitter.com/intent/tweet?text=https://onfin.github.io/calculators/cards" target="_blank"><i class="share">&#xea9c;</i></a>
+        <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/calculators/cards" target="_blank"><i class="share">&#xea93;</i></a>
+    </div>
+
+        </aside>
     </article>
 </div>
 </div>
