--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta charset="utf-8" />
     <link rel="canonical" href="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css" />
     <link rel="stylesheet" href="/style.css" />
     <link href="/feed.atom.xml" type="application/atom+xml" rel="alternate" title="Житейские воззрения пана Семушельского Atom Feed" />
 
@@ -33,7 +32,7 @@
                 <ul class="menu">
                         <li class="pure-menu-item"><a href="/blog" class="pure-menu-link">Сиюминутное</a></li>
                         <li class="pure-menu-item"><a href="/literacy" class="pure-menu-link">Грамотность</a></li>
-                        <li class="pure-menu-item"><a href="/pages/halava" class="pure-menu-link">Халява</a></li>
+                        <li class="pure-menu-item"><a href="/notes" class="pure-menu-link">Заметки</a></li>
                         <li class="pure-menu-item"><a href="/pages/sources" class="pure-menu-link">Источники</a></li>
                         <li class="pure-menu-item"><a href="/calculators" class="pure-menu-link">Калькуляторы</a></li>
                 </ul>
@@ -60,6 +59,15 @@
 <p>Хобби у меня такое — деньги считать. Свои, чужие — не важно. Вот и рассказываю здесь, где чего насчитал, к каким выводам пришёл и что из-за них сделал, или только собираюсь, или даже не собираюсь, но просто можно при надобности.</p>
 </div>
         </div>
+        <aside>
+                <div class="share-buttons">
+        <a href="https://vk.com/share.php?url=https://onfin.github.io&title=Шолом алейхем!&description=" target="_blank"><i class="share">&#xea9d;</i></a>
+        <a href="https://telegram.me/share/url?url=https://onfin.github.io" target="_blank"><i class="share">&#xea9b;</i></a>
+        <a href="https://twitter.com/intent/tweet?text=https://onfin.github.io" target="_blank"><i class="share">&#xea9c;</i></a>
+        <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io" target="_blank"><i class="share">&#xea93;</i></a>
+    </div>
+
+        </aside>
     </article>
 </div>
 </div>
