--- a/literacy/aboutmoney.html
+++ b/literacy/aboutmoney.html
@@ -6,7 +6,6 @@
     <meta charset="utf-8" />
     <link rel="canonical" href="/literacy/aboutmoney" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css" />
     <link rel="stylesheet" href="/style.css" />
     <link href="/feed.atom.xml" type="application/atom+xml" rel="alternate" title="Житейские воззрения пана Семушельского Atom Feed" />
 
@@ -31,7 +30,7 @@
                 <ul class="menu">
                         <li class="pure-menu-item"><a href="/blog" class="pure-menu-link">Сиюминутное</a></li>
                         <li class="pure-menu-item"><a href="/literacy" class="pure-menu-link">Грамотность</a></li>
-                        <li class="pure-menu-item"><a href="/pages/halava" class="pure-menu-link">Халява</a></li>
+                        <li class="pure-menu-item"><a href="/notes" class="pure-menu-link">Заметки</a></li>
                         <li class="pure-menu-item"><a href="/pages/sources" class="pure-menu-link">Источники</a></li>
                         <li class="pure-menu-item"><a href="/calculators" class="pure-menu-link">Калькуляторы</a></li>
                 </ul>
@@ -47,7 +46,7 @@
         <header>
             <h1>Про деньги</h1>
             <div class="meta">
-                        <p> Обновлено: 2019-10-14 </p>
+                        <p> Обновлено: <time>2019-10-14</time> </p>
             </div>
         </header>
 
@@ -66,6 +65,15 @@
 <p>$$ P_B \cdot B + P_G \cdot G = V(M + \Delta S), $$</p>
 <p>где $P_B$ и $P_G$ это цены сапог и зерна уже «в деньгах», $M + \Delta S$ — количество денег, которое у крестьян было «в обороте» + то, что достали из кубышек (или убрали в них, тогда $\Delta S &lt; 0$), а $V$ — это сколько раз эти деньги за время ярмарки обернулись.</p>
         </div>
+        <aside>
+                <div class="share-buttons">
+        <a href="https://vk.com/share.php?url=https://onfin.github.io/literacy/aboutmoney&title=Про деньги&description=" target="_blank"><i class="share">&#xea9d;</i></a>
+        <a href="https://telegram.me/share/url?url=https://onfin.github.io/literacy/aboutmoney" target="_blank"><i class="share">&#xea9b;</i></a>
+        <a href="https://twitter.com/intent/tweet?text=https://onfin.github.io/literacy/aboutmoney" target="_blank"><i class="share">&#xea9c;</i></a>
+        <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/literacy/aboutmoney" target="_blank"><i class="share">&#xea93;</i></a>
+    </div>
+
+        </aside>
     </article>
 </div>
 </div>
