--- a/literacy/credits.html
+++ b/literacy/credits.html
@@ -6,7 +6,6 @@
     <meta charset="utf-8" />
     <link rel="canonical" href="/literacy/credits" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css" />
     <link rel="stylesheet" href="/style.css" />
     <link href="/feed.atom.xml" type="application/atom+xml" rel="alternate" title="Житейские воззрения пана Семушельского Atom Feed" />
         <meta name="description" content="Теория и расчёт различных схем погашения кредитов. Какова реальная переплата по кредиту по той или иной схеме? Сколько стоит хранить в банке резерв на будущие платежи по кредиту? Сколько можно заработать, если вложить кредитные деньги?" />
@@ -18,7 +17,7 @@
 
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2019-01-12" />
-        <meta property="og:article:modified_time" content="2019-10-14" />
+        <meta property="og:article:modified_time" content="2019-10-16" />
 <meta property="og:title" content="Математика кредитов" />
 <meta property="og:url" content="https://onfin.github.io/literacy/credits" />
 
@@ -36,7 +35,7 @@
                 <ul class="menu">
                         <li class="pure-menu-item"><a href="/blog" class="pure-menu-link">Сиюминутное</a></li>
                         <li class="pure-menu-item"><a href="/literacy" class="pure-menu-link">Грамотность</a></li>
-                        <li class="pure-menu-item"><a href="/pages/halava" class="pure-menu-link">Халява</a></li>
+                        <li class="pure-menu-item"><a href="/notes" class="pure-menu-link">Заметки</a></li>
                         <li class="pure-menu-item"><a href="/pages/sources" class="pure-menu-link">Источники</a></li>
                         <li class="pure-menu-item"><a href="/calculators" class="pure-menu-link">Калькуляторы</a></li>
                 </ul>
@@ -53,7 +52,7 @@
             <h1>Математика кредитов</h1>
             <div class="meta">
                     <p class="description">Теория и расчёт различных схем погашения кредитов. Какова реальная переплата по кредиту по той или иной схеме? Сколько стоит хранить в банке резерв на будущие платежи по кредиту? Сколько можно заработать, если вложить кредитные деньги?</p>
-                        <p> Обновлено: 2019-10-14 </p>
+                        <p> Обновлено: <time>2019-10-16</time> </p>
             </div>
         </header>
 
@@ -69,7 +68,7 @@
 <p>Однако стоит ли превращать аннуитетную схему в диффенецированную? С одной стороны, при первых аннуитетных платежах остаток долга практически не гасится, и общая сумма начисленных процентов окажется гораздо больше, чем при дифференцированном погашении. Однако мы помним, что деньги со временем обесцениваются, а этот эффект работает уже в пользу аннуитетной схемы, т.к. при ней погашение тела долга происходит уже «дешёвыми» деньгами. Сведём расчёты в excel, чтобы установить, какой из эффектов важнее (табличку можно редактировать):</p>
 <div id="myExcelDiv" style="width: 100%; height: 410px"></div>
 
-<script type="text/javascript" src="https://onedrive.live.com/embed?resid=180B7DCBE14D0A9B%21114&authkey=%21AMBQUsehmspJWxM&em=3&wdItem=%22'Sheet1'!A1%3AE19%22&wdDivId=%22myExcelDiv%22&wdDownloadButton=1&wdAllowInteractivity=1&wdAllowTyping=1"></script>
+<script async defer type="text/javascript" src="https://onedrive.live.com/embed?resid=180B7DCBE14D0A9B%21114&authkey=%21AMBQUsehmspJWxM&em=3&wdItem=%22'Sheet1'!A1%3AE19%22&wdDivId=%22myExcelDiv%22&wdDownloadButton=1&wdAllowInteractivity=1&wdAllowTyping=1"></script>
 
 <p>Отсюда видно, что переплата с учётом инфляции по аннуитетной схеме всё-таки выше, чем по дифференциированной, но уже не настолько, как если сравнивать номинальные величины. Преимущество аннуитетная схема начинает получать только когда инфляция обгоняет ставку по кредиту. В случае длинных ипотечных кредитов это не такой уж невероятный сценарий: ставки по кредитам в России обычно фиксированные, поэтому в периоды низкой инфляции ставку можно снизить посредством рефинансирования, а потом, при разгоне инфляции, она сохранится: и кредит начнёт приносить доход.</p>
 <p>С учётом инфляции схемы погашений будут выглядеть уже так:
@@ -80,18 +79,27 @@
 <p>Вообще, все такие ситуации лучше всего разбирать «прямым методом» — рассчитывая конечный размер капитала в альтернативных сценариях. Сравнение между собой отдельных параметров сценариев приводит к ошибочным выводам. Да, размер переплаты по кредиту под 11%г меньше начисленных на его сумму процентов на вкладе под 7%г, но это всё равно убыточный сценарий. Казалось бы, это очевидно, если сравнивать не размеры выплат, а проценты. Но взять годовой кредит под 11% и положить его на вклад под 13%г — это всё равно убыточный сценарий! Итак, считаем. Базовый вариант: взяли кредит, положили его на вклад, а платежи делаем из з/п. Альтернативный: кредит не берём, а кладём на вклад те суммы, которые пришлось бы отдавать по нему в базовом варианте. Удобнее считать с аннуитетной схемой погашения, а инфляция нам не важна: мы сравниваем итоговые суммы, которые инфляция обесценит одинаково.</p>
 <div id="myExcelDiv2" style="width: 100%; height: 578px"></div>
 
-<script type="text/javascript" src="https://onedrive.live.com/embed?resid=180B7DCBE14D0A9B%21114&authkey=%21AMBQUsehmspJWxM&em=3&wdItem=%22'%D0%9B%D0%B8%D1%81%D1%821'!A1%3AE27%22&wdDivId=%22myExcelDiv2%22&wdDownloadButton=1&wdAllowInteractivity=1&wdAllowTyping=1"></script>
+<script async defer type="text/javascript" src="https://onedrive.live.com/embed?resid=180B7DCBE14D0A9B%21114&authkey=%21AMBQUsehmspJWxM&em=3&wdItem=%22'%D0%9B%D0%B8%D1%81%D1%821'!A1%3AE27%22&wdDivId=%22myExcelDiv2%22&wdDownloadButton=1&wdAllowInteractivity=1&wdAllowTyping=1"></script>
 
 <p>Внизу таблицы приведён график погашения кредита на первый год в сравнении с накоплением платежей на вкладе. В принципе, этого графика достаточно для всех сравнений, можете скачать и побаловаться (например, изменив схему погашения с аннуитетной на дифференцированную — для этого достаточно в колонке «платёж в счёт долга» установить одинаковые платежи). Просто при расчёте для разных сроков кредита мне лениво растягивать/сжимать эту табличку, легче немного повозиться с алгеброй и все результаты вывести в одну ячейку. Но для сложных схем такие таблички незаменимы: алгебра может оказаться слишком сложной. Пользуйтесь табличками!</p>
 <p>Итак, что мы видим. Накопить нужную сумму в течение года действительно выгоднее, чем брать кредит. Однако всего лишь на 2,74%г, а совсем не на 4%г, как следовало бы из разницы ставок. А при увеличении срока кредита до пяти лет, эффективная стоимость снизится до 2%г, и продолжит падать дальше, но в отрицательную зону не перейдёт. А теперь попробуйте подобрать такое соотношение ставок и срока кредита, чтобы получить ощутимую доходность, вкладывая под проценты заёмные деньги. Реально ли такое соотношение? Скорее нет, если только вы не подставились под избыточные риски.</p>
 <p>Результаты довольно неочевидные. Это потому, что капитализация и антикапитализация — <em>нелинейные</em> эффекты, которые взаимодействуют между собой очень нетривиальным образом. Это приводит к тому, что сильно нажиться на заёмных деньгах едва ли возможно. С другой стороны, мы видим, что резерв под предстоящие выплаты по кредиту намного дешевле, чем кажется, поэтому не нужно торопиться все образовавшиеся излишки отправлять на погашение кредитов, напрашиваясь на кассовый разрыв и штрафные санкции. Наглядно это видно в следующей таблице:</p>
 <div id="myExcelDiv3" style="width: 100%; height: 290px"></div>
 
-<script type="text/javascript" src="https://onedrive.live.com/embed?resid=180B7DCBE14D0A9B%21114&authkey=%21AMBQUsehmspJWxM&em=3&wdItem=%22'reserv'!A1%3AD13%22&wdDivId=%22myExcelDiv3%22&wdDownloadButton=1&wdAllowInteractivity=1&wdAllowTyping=1"></script>
+<script async defer type="text/javascript" src="https://onedrive.live.com/embed?resid=180B7DCBE14D0A9B%21114&authkey=%21AMBQUsehmspJWxM&em=3&wdItem=%22'reserv'!A1%3AD13%22&wdDivId=%22myExcelDiv3%22&wdDownloadButton=1&wdAllowInteractivity=1&wdAllowTyping=1"></script>
 
 <p>Сравниваем сценарии, где мы поддерживаем резерв по выплатам на полгода вперёд (направляя начисленные проценты на погашение кредита, а когда он уменьшится до размера резерва — погашая его полность.) и где сразу погашаем часть кредита на размер резерва (но не уменьшая при этом ежемесячный платёж: всё-таки, выгоднее гасить кредит раньше). Как видно, реальный размер выплат с учётом инфляции различается незначительно.</p>
 <p>Статья будет пополняться новыми разборами.</p>
         </div>
+        <aside>
+                <div class="share-buttons">
+        <a href="https://vk.com/share.php?url=https://onfin.github.io/literacy/credits&title=Математика кредитов&description=Теория и расчёт различных схем погашения кредитов. Какова реальная переплата по кредиту по той или иной схеме? Сколько стоит хранить в банке резерв на будущие платежи по кредиту? Сколько можно заработать, если вложить кредитные деньги?" target="_blank"><i class="share">&#xea9d;</i></a>
+        <a href="https://telegram.me/share/url?url=https://onfin.github.io/literacy/credits" target="_blank"><i class="share">&#xea9b;</i></a>
+        <a href="https://twitter.com/intent/tweet?text=https://onfin.github.io/literacy/credits" target="_blank"><i class="share">&#xea9c;</i></a>
+        <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/literacy/credits" target="_blank"><i class="share">&#xea93;</i></a>
+    </div>
+
+        </aside>
     </article>
 </div>
 </div>
@@ -102,11 +110,13 @@
 <div class="pagination pure-u-1 pure-u-lg-9-12">
     <div class="pure-g">
     <div class="pure-u-1-3 left">
+                <a href="/literacy/cardscalc"> &lt;&lt; Использование и расчёт банковских карт </a>
     </div>
     <div class="pure-u-1-3 center">
                 <a href="/literacy"> &uarr; Грамотность &uarr; </a>
     </div>
     <div class="pure-u-1-3 right">
+                <a href="/literacy/moneytransfer"> Денежные переводы &gt;&gt; </a>
     </div>
     </div>
 </div>
