--- a/literacy/howto.html
+++ b/literacy/howto.html
@@ -6,7 +6,6 @@
     <meta charset="utf-8" />
     <link rel="canonical" href="/literacy/howto" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css" />
     <link rel="stylesheet" href="/style.css" />
     <link href="/feed.atom.xml" type="application/atom+xml" rel="alternate" title="Житейские воззрения пана Семушельского Atom Feed" />
         <meta name="description" content="Правильное отношение к деньгам. Необходимость сбережений. Риск и доходность. Откуда берётся пассивный доход. Правила сбережений. Как учитывать и планировать расходы. Развитие финансовой дисциплины. Как и зачем создавать резервы. Правильный порядок закрытия кредитов. Что такое фондовый рынок, облигации и акции." />
@@ -18,7 +17,7 @@
 
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2019-08-18" />
-        <meta property="og:article:modified_time" content="2019-10-14" />
+        <meta property="og:article:modified_time" content="2019-10-16" />
 <meta property="og:title" content="Пенсия своими силами. Пошаговое руководство" />
 <meta property="og:url" content="https://onfin.github.io/literacy/howto" />
 
@@ -36,7 +35,7 @@
                 <ul class="menu">
                         <li class="pure-menu-item"><a href="/blog" class="pure-menu-link">Сиюминутное</a></li>
                         <li class="pure-menu-item"><a href="/literacy" class="pure-menu-link">Грамотность</a></li>
-                        <li class="pure-menu-item"><a href="/pages/halava" class="pure-menu-link">Халява</a></li>
+                        <li class="pure-menu-item"><a href="/notes" class="pure-menu-link">Заметки</a></li>
                         <li class="pure-menu-item"><a href="/pages/sources" class="pure-menu-link">Источники</a></li>
                         <li class="pure-menu-item"><a href="/calculators" class="pure-menu-link">Калькуляторы</a></li>
                 </ul>
@@ -53,7 +52,7 @@
             <h1>Пенсия своими силами. Пошаговое руководство</h1>
             <div class="meta">
                     <p class="description">Правильное отношение к деньгам. Необходимость сбережений. Риск и доходность. Откуда берётся пассивный доход. Правила сбережений. Как учитывать и планировать расходы. Развитие финансовой дисциплины. Как и зачем создавать резервы. Правильный порядок закрытия кредитов. Что такое фондовый рынок, облигации и акции.</p>
-                        <p> Обновлено: 2019-10-14 </p>
+                        <p> Обновлено: <time>2019-10-16</time> </p>
             </div>
         </header>
 
@@ -221,7 +220,7 @@ calcRetirement();
 <li>
 <p>Сводная таблица по брокерам</p>
 <p><div id="myExcelDiv" style="width: 700px; height: 448px"></div>
-<script type="text/javascript" src="https://onedrive.live.com/embed?resid=180B7DCBE14D0A9B%21118&authkey=%21ANFN9mvZ5-UURWg&em=3&wdItem=%22'Sheet1'!A1%3AH8%22&wdDivId=%22myExcelDiv%22&wdHideGridlines=1&wdAllowInteractivity=0"></script></p>
+<script async defer type="text/javascript" src="https://onedrive.live.com/embed?resid=180B7DCBE14D0A9B%21118&authkey=%21ANFN9mvZ5-UURWg&em=3&wdItem=%22'Sheet1'!A1%3AH8%22&wdDivId=%22myExcelDiv%22&wdHideGridlines=1&wdAllowInteractivity=0"></script></p>
 <p>Конечно, брокеров больше, но эти, в моём понимании, лучше других подходят под задачи обычного человека.</p>
 </li>
 <li>
@@ -273,6 +272,15 @@ calcRetirement();
 </li>
 </ol>
         </div>
+        <aside>
+                <div class="share-buttons">
+        <a href="https://vk.com/share.php?url=https://onfin.github.io/literacy/howto&title=Пенсия своими силами. Пошаговое руководство&description=Правильное отношение к деньгам. Необходимость сбережений. Риск и доходность. Откуда берётся пассивный доход. Правила сбережений. Как учитывать и планировать расходы. Развитие финансовой дисциплины. Как и зачем создавать резервы. Правильный порядок закрытия кредитов. Что такое фондовый рынок, облигации и акции." target="_blank"><i class="share">&#xea9d;</i></a>
+        <a href="https://telegram.me/share/url?url=https://onfin.github.io/literacy/howto" target="_blank"><i class="share">&#xea9b;</i></a>
+        <a href="https://twitter.com/intent/tweet?text=https://onfin.github.io/literacy/howto" target="_blank"><i class="share">&#xea9c;</i></a>
+        <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/literacy/howto" target="_blank"><i class="share">&#xea93;</i></a>
+    </div>
+
+        </aside>
     </article>
 </div>
 </div>
@@ -283,11 +291,13 @@ calcRetirement();
 <div class="pagination pure-u-1 pure-u-lg-9-12">
     <div class="pure-g">
     <div class="pure-u-1-3 left">
+                <a href="/literacy/reserves"> &lt;&lt; Формирование резервов </a>
     </div>
     <div class="pure-u-1-3 center">
                 <a href="/literacy"> &uarr; Грамотность &uarr; </a>
     </div>
     <div class="pure-u-1-3 right">
+                <a href="/literacy/basebank"> Выбор базового банка &gt;&gt; </a>
     </div>
     </div>
 </div>
