--- a/literacy/instruments.html
+++ b/literacy/instruments.html
@@ -6,7 +6,6 @@
     <meta charset="utf-8" />
     <link rel="canonical" href="/literacy/instruments" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css" />
     <link rel="stylesheet" href="/style.css" />
     <link href="/feed.atom.xml" type="application/atom+xml" rel="alternate" title="Житейские воззрения пана Семушельского Atom Feed" />
         <meta name="description" content="Нет доходности без риска. Особенности, риски и историческая доходность наличных денег, вкладов в рублях и долларах, облигаций (ОФЗ), золота, недвижимости, российских и американских акций. Что такое паевые и биржевые (ETF) фонды. Проблемы российских фондов. Неэффективность активно управляемых фондов." />
@@ -36,7 +35,7 @@
                 <ul class="menu">
                         <li class="pure-menu-item"><a href="/blog" class="pure-menu-link">Сиюминутное</a></li>
                         <li class="pure-menu-item"><a href="/literacy" class="pure-menu-link">Грамотность</a></li>
-                        <li class="pure-menu-item"><a href="/pages/halava" class="pure-menu-link">Халява</a></li>
+                        <li class="pure-menu-item"><a href="/notes" class="pure-menu-link">Заметки</a></li>
                         <li class="pure-menu-item"><a href="/pages/sources" class="pure-menu-link">Источники</a></li>
                         <li class="pure-menu-item"><a href="/calculators" class="pure-menu-link">Калькуляторы</a></li>
                 </ul>
@@ -53,7 +52,7 @@
             <h1>Краткий обзор инструментов сбережения. Сколько и во что вкладывать</h1>
             <div class="meta">
                     <p class="description">Нет доходности без риска. Особенности, риски и историческая доходность наличных денег, вкладов в рублях и долларах, облигаций (ОФЗ), золота, недвижимости, российских и американских акций. Что такое паевые и биржевые (ETF) фонды. Проблемы российских фондов. Неэффективность активно управляемых фондов.</p>
-                        <p> Обновлено: 2019-10-14 </p>
+                        <p> Обновлено: <time>2019-10-14</time> </p>
             </div>
         </header>
 
@@ -208,6 +207,15 @@
 <p>Видно, что до 2008г доходность по американским акциям не могла обогнать российскую инфляцию вкупе с обесценением доллара относительно рубля. Российский же рынок уверенно рос, пока не <em>перерос себя</em> к тому же 2008г и совершенно перестал приносить прибыль после восстановления (восстановился он на возврате стоимости нефти к докризисным значениям в 2011г, но с тех пор она падает, доходность индекса около нуля держат другие отрасли), тогда как американский показал четырёхкратную доходность. Также глазу заметна куда бо́льшая стабильность американского индекса — это результат сбалансированности экономических факторов.</p>
 <p>Важное свойство общерыночного риска — обоюдоострость, причём опаснее та сторона, что завышает стоимость активов выше справедливой. Потому что мы можем не продавать доходные активы себе в убыток, но вот вероятность купить их по ценам, которые приведут к отрицательной доходности на ближайшие пару десятилетий (как американские акции в 2000 или российские в 2008) — есть всегда, и её реализации надо старательно избегать.</p>
         </div>
+        <aside>
+                <div class="share-buttons">
+        <a href="https://vk.com/share.php?url=https://onfin.github.io/literacy/instruments&title=Краткий обзор инструментов сбережения. Сколько и во что вкладывать&description=Нет доходности без риска. Особенности, риски и историческая доходность наличных денег, вкладов в рублях и долларах, облигаций (ОФЗ), золота, недвижимости, российских и американских акций. Что такое паевые и биржевые (ETF) фонды. Проблемы российских фондов. Неэффективность активно управляемых фондов." target="_blank"><i class="share">&#xea9d;</i></a>
+        <a href="https://telegram.me/share/url?url=https://onfin.github.io/literacy/instruments" target="_blank"><i class="share">&#xea9b;</i></a>
+        <a href="https://twitter.com/intent/tweet?text=https://onfin.github.io/literacy/instruments" target="_blank"><i class="share">&#xea9c;</i></a>
+        <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/literacy/instruments" target="_blank"><i class="share">&#xea93;</i></a>
+    </div>
+
+        </aside>
     </article>
 </div>
 </div>
@@ -218,6 +226,7 @@
 <div class="pagination pure-u-1 pure-u-lg-9-12">
     <div class="pure-g">
     <div class="pure-u-1-3 left">
+                <a href="/literacy/cards"> &lt;&lt; Банковские карты </a>
     </div>
     <div class="pure-u-1-3 center">
                 <a href="/literacy"> &uarr; Грамотность &uarr; </a>
