--- a/literacy/moneytransfer.html
+++ b/literacy/moneytransfer.html
@@ -6,7 +6,6 @@
     <meta charset="utf-8" />
     <link rel="canonical" href="/literacy/moneytransfer" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css" />
     <link rel="stylesheet" href="/style.css" />
     <link href="/feed.atom.xml" type="application/atom+xml" rel="alternate" title="Житейские воззрения пана Семушельского Atom Feed" />
         <meta name="description" content="Как правильно переводить деньги. Какие здесь есть возможности, риски и подводные камни. Как избежать обвинений в обналичке, транзите и отмывании." />
@@ -18,7 +17,7 @@
 
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2018-12-09" />
-        <meta property="og:article:modified_time" content="2019-10-14" />
+        <meta property="og:article:modified_time" content="2019-10-17" />
 <meta property="og:title" content="Денежные переводы" />
 <meta property="og:url" content="https://onfin.github.io/literacy/moneytransfer" />
 
@@ -36,7 +35,7 @@
                 <ul class="menu">
                         <li class="pure-menu-item"><a href="/blog" class="pure-menu-link">Сиюминутное</a></li>
                         <li class="pure-menu-item"><a href="/literacy" class="pure-menu-link">Грамотность</a></li>
-                        <li class="pure-menu-item"><a href="/pages/halava" class="pure-menu-link">Халява</a></li>
+                        <li class="pure-menu-item"><a href="/notes" class="pure-menu-link">Заметки</a></li>
                         <li class="pure-menu-item"><a href="/pages/sources" class="pure-menu-link">Источники</a></li>
                         <li class="pure-menu-item"><a href="/calculators" class="pure-menu-link">Калькуляторы</a></li>
                 </ul>
@@ -53,7 +52,7 @@
             <h1>Денежные переводы</h1>
             <div class="meta">
                     <p class="description">Как правильно переводить деньги. Какие здесь есть возможности, риски и подводные камни. Как избежать обвинений в обналичке, транзите и отмывании.</p>
-                        <p> Обновлено: 2019-10-14 </p>
+                        <p> Обновлено: <time>2019-10-17</time> </p>
             </div>
         </header>
 
@@ -124,6 +123,8 @@
 </ul>
 <p>Так как в случае такого перевода нужно «кормить» ещё одного посредника, они очень редко бывают бесплатными, а бесплатный лимит, когда он есть, всё равно сильно ограничен: около 20Кр/мес. Обычная комиссия около 1% min 20р., верхнего ограничения комиссии, как при межбанке, <strong>нет</strong>. Более того, в этом случае и за <strong>зачисление</strong> очень многие банки берут комисиию — порядка 0,5% min 30р. Внимательно прочитайте свои тарифы, даже перед тем как предлагать кому-либо отправить вам деньги по номеру карты из другого банка — вы рискуете получить меньше.</p>
 <p>Если межбанковские переводы по закону безотзывные, то правила платёжных систем допускают возможность произвести <em>чарджбэк</em> (<em>chargeback</em>) — обратное списание средств, отправленных ошибочно или в результате мошеннических действий (это не обязательно подделка карты или кража её реквизитов, а и прямой обман, например, продавцом), если суметь это платёжной системе доказать.</p>
+<div id="pulling"></div>
+
 <h2 id="_3">Пополнение с карты другого банка</h2>
 <p>Оно же «стягивание» или «всасывание». Специфический способ, в котором инциирует перевод не отправитель, а получатель.
 В ЛК/МП выбираете что-то вроде «пополнить с карты другого банка», далее всё происходит как при обычной интернет-покупке: вводите все реквизиты карты-донора и сумму, потом подтверждаете перевод кодом из СМС.</p>
@@ -163,6 +164,15 @@
 </ul>
 <p>Если вы в самом деле не занимаетесь никакой противозаконной деятельностью, соблюдать эти правила нетрудно.</p>
         </div>
+        <aside>
+                <div class="share-buttons">
+        <a href="https://vk.com/share.php?url=https://onfin.github.io/literacy/moneytransfer&title=Денежные переводы&description=Как правильно переводить деньги. Какие здесь есть возможности, риски и подводные камни. Как избежать обвинений в обналичке, транзите и отмывании." target="_blank"><i class="share">&#xea9d;</i></a>
+        <a href="https://telegram.me/share/url?url=https://onfin.github.io/literacy/moneytransfer" target="_blank"><i class="share">&#xea9b;</i></a>
+        <a href="https://twitter.com/intent/tweet?text=https://onfin.github.io/literacy/moneytransfer" target="_blank"><i class="share">&#xea9c;</i></a>
+        <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/literacy/moneytransfer" target="_blank"><i class="share">&#xea93;</i></a>
+    </div>
+
+        </aside>
     </article>
 </div>
 </div>
@@ -173,6 +183,7 @@
 <div class="pagination pure-u-1 pure-u-lg-9-12">
     <div class="pure-g">
     <div class="pure-u-1-3 left">
+                <a href="/literacy/credits"> &lt;&lt; Математика кредитов </a>
     </div>
     <div class="pure-u-1-3 center">
                 <a href="/literacy"> &uarr; Грамотность &uarr; </a>
