--- a/notes/referrals.html
+++ b/notes/referrals.html
@@ -2,25 +2,24 @@
 
 <html lang="ru">
 <head>
-    <title>Халява</title>
+    <title>Реферальные ссылки</title>
     <meta charset="utf-8" />
-        <meta http-equiv="refresh" content="0; url=/notes/referrals">
     <link rel="canonical" href="/notes/referrals" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="/style.css" />
     <link href="/feed.atom.xml" type="application/atom+xml" rel="alternate" title="Житейские воззрения пана Семушельского Atom Feed" />
-        <meta name="description" content="Здесь собраны всякие сервисы, от которых я получаю некоторую выгоду. К некоторым приложены реферальные ссылки (выделены жирным в конце описания), за регистрацию по которым каждый из нас получит по небольшой халявной плюшке." />
-        <meta name="keywords" content="карты, вклады, брокеры, кэшбэк, реферальные программы" />
+        <meta name="description" content="Ссылки на финансовые сервисы которыми я пользуюсь; если их использовать для регистрации в них, можно получить немного халявы (и мне принести)" />
+        <meta name="keywords" content="реферальные ссылки" />
 
 <meta property="og:locale" content="ru" />
 
-    <meta property="og:description" content="Здесь собраны всякие сервисы, от которых я получаю некоторую выгоду. К некоторым приложены реферальные ссылки (выделены жирным в конце описания), за регистрацию по которым каждый из нас получит по небольшой халявной плюшке." />
+    <meta property="og:description" content="Ссылки на финансовые сервисы которыми я пользуюсь; если их использовать для регистрации в них, можно получить немного халявы (и мне принести)" />
 
     <meta property="og:type" content="article" />
-        <meta property="og:article:published_time" content="2018-12-01" />
+        <meta property="og:article:published_time" content="2019-10-18" />
         <meta property="og:article:modified_time" content="2019-10-18" />
-<meta property="og:title" content="Халява" />
-<meta property="og:url" content="https://onfin.github.io/pages/halava" />
+<meta property="og:title" content="Реферальные ссылки" />
+<meta property="og:url" content="https://onfin.github.io/notes/referrals" />
 
 
 
@@ -50,10 +49,9 @@
 <div class="page pure-u-1 pure-u-lg-9-12">
     <article>
         <header>
-            <h1>Халява</h1>
+            <h1>Реферальные ссылки</h1>
             <div class="meta">
-                    <p class="description">Здесь собраны всякие сервисы, от которых я получаю некоторую выгоду. К некоторым приложены реферальные ссылки (выделены жирным в конце описания), за регистрацию по которым каждый из нас получит по небольшой халявной плюшке.</p>
-                        <p> Обновлено: <time>2019-10-18</time> </p>
+                    <p class="description">Ссылки на финансовые сервисы которыми я пользуюсь; если их использовать для регистрации в них, можно получить немного халявы (и мне принести)</p>
             </div>
         </header>
 
@@ -63,11 +61,9 @@
 <li><a href="#tinkoff-black">Tinkoff Black</a></li>
 <li><a href="#tinkoff-allairlines">Tinkoff AllAirlines</a></li>
 <li><a href="#_1">Дебетовая карта Рокетбанка</a></li>
-<li><a href="#_2">Индивидуальный инвестиционный счёт в ВТБ</a></li>
-<li><a href="#-">Брокерский счёт в Регион-Эволюции</a></li>
 <li><a href="#booking">Booking</a></li>
 <li><a href="#airbnb">AirBnB</a></li>
-<li><a href="#_3">Прочее</a></li>
+<li><a href="#_2">Прочее</a></li>
 </ul>
 </div>
 <h2 id="tinkoff-black"><a href="https://www.tinkoff.ru/cards/debit-cards/tinkoff-black/tariffs/">Tinkoff Black</a></h2>
@@ -137,31 +133,6 @@
 <li>Каждый месяц предлагают выбрать магазины для получения кэшбэка (3 из 5 случайных), кэшбэк до 10% (базовый — 1%), есть интересные предложения. Кэшбэк бонусами. Бонусами компенсируются покупки от 3Кр (1 бонус = 1 рубль).</li>
 </ul>
 <p>Плюшки за <strong><a href="https://rocketbank.ru/loves/andrei-bolkisev-late-smoke">оформление</a></strong>: по 500 бонусов.</p>
-<h2 id="_2"><a href="https://www.vtb.ru/personal/investicii/brokerskoe-obsluzhivanie-iis">Индивидуальный инвестиционный счёт в ВТБ</a></h2>
-<p>Почему пользуюсь:</p>
-<ul>
-<li>Можно получать дивиденды и купоны на бесплатную дебетовую карту, а с неё бесплатно всасывать деньги в Тинька. Больше такой возможности нигде не нашёл (или дивиденды/купоны остаются на ИИС, откуда их нельзя вывести, или нельзя бесплатно перевести деньги в другой мой банк иначе как через наличные).</li>
-<li>Совершенно ненавязчивый банк.</li>
-</ul>
-<p>Что необходимо знать:</p>
-<ul>
-<li>За тот месяц, в который были покупки/продажи ценных бумах, снимется комиссия 150р (105р если куплен хотя бы один лот акций ВТБ, это примерно 350р).</li>
-<li>На любой чих нужно подписать с десяток бумаг в офисе.</li>
-</ul>
-<h2 id="-"><a href="https://evolution.ru/">Брокерский счёт в Регион-Эволюции</a></h2>
-<p>Ипользуется как экспериментальный накопительный счёт.</p>
-<p>Почему пользуюсь:</p>
-<ul>
-<li>позволяет с минимальными комиссиями покупать ОФЗ и окологосударственные корпоративные облигации (0,1%г за хранение, бесплатное погашение по оферте),</li>
-<li>позволяет отдавать деньги в РЕПО (однодневный займ под залог ценных бумаг) от 10Кр, получая рыночную доходность на текущий день (минус 0,73%г комиссии),</li>
-<li>показывает правильную итоговую доходность,</li>
-<li>бесплатный вывод в любой банк.</li>
-</ul>
-<p>Что необходимо знать:</p>
-<ul>
-<li>Доступен только очень ограниченный список облигаций.</li>
-<li>Проект на ранней стадии развития и малоизвестен (хотя заметных косяков в работе я не замечал), прибыли сейчас не зарабатывает, активно не продвигается; компания может потерять к нему интерес и закрыть.</li>
-</ul>
 <h2 id="booking"><a href="https://www.booking.com/">Booking</a></h2>
 <div class="product-badge">
   <img src="/images/Booking.png" class="product-badge" />
@@ -172,19 +143,19 @@
 <h2 id="airbnb"><a href="https://www.airbnb.ru">AirBnB</a></h2>
 <p>Здесь вторая половина. Лучше бронировать только квартиры: сервис для хостелов не предназначен и можно нарваться на непонимание.</p>
 <p>Плюшки за <strong><a href="https://www.airbnb.com/c/andreib595?currency=RUB">регистрацию</a></strong>: скидка 2100р за бронирование дороже 4500 (мне — 1100р).</p>
-<h2 id="_3">Прочее</h2>
+<h2 id="_2">Прочее</h2>
 <div class="product-badge">
   <img src="/images/bankiru-logo.svg" class="product-badge" />
 </div>
 
-<p>Тема с промокодами и приглашениями на разные прочие сервисы/банки ко взаимной выгоде есть на <a href="http://www.banki.ru/forum/?PAGE_NAME=list&amp;FID=27">форуме Склянок</a>.</p>
+<p>Если не нашли подходящего, тема с промокодами и приглашениями на разные прочие сервисы/банки ко взаимной выгоде есть на <a href="http://www.banki.ru/forum/?PAGE_NAME=list&amp;FID=27">форуме Склянок</a>.</p>
         </div>
         <aside>
                 <div class="share-buttons">
-        <a href="https://vk.com/share.php?url=https://onfin.github.io/pages/halava&title=Халява&description=Здесь собраны всякие сервисы, от которых я получаю некоторую выгоду. К некоторым приложены реферальные ссылки (выделены жирным в конце описания), за регистрацию по которым каждый из нас получит по небольшой халявной плюшке." target="_blank"><i class="share">&#xea9d;</i></a>
-        <a href="https://telegram.me/share/url?url=https://onfin.github.io/pages/halava" target="_blank"><i class="share">&#xea9b;</i></a>
-        <a href="https://twitter.com/intent/tweet?text=https://onfin.github.io/pages/halava" target="_blank"><i class="share">&#xea9c;</i></a>
-        <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/pages/halava" target="_blank"><i class="share">&#xea93;</i></a>
+        <a href="https://vk.com/share.php?url=https://onfin.github.io/notes/referrals&title=Реферальные ссылки&description=Ссылки на финансовые сервисы которыми я пользуюсь; если их использовать для регистрации в них, можно получить немного халявы (и мне принести)" target="_blank"><i class="share">&#xea9d;</i></a>
+        <a href="https://telegram.me/share/url?url=https://onfin.github.io/notes/referrals" target="_blank"><i class="share">&#xea9b;</i></a>
+        <a href="https://twitter.com/intent/tweet?text=https://onfin.github.io/notes/referrals" target="_blank"><i class="share">&#xea9c;</i></a>
+        <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/notes/referrals" target="_blank"><i class="share">&#xea93;</i></a>
     </div>
 
         </aside>
@@ -194,6 +165,19 @@
     </main>
 
     <footer>
+<div class="pure-g">
+<div class="pagination pure-u-1 pure-u-lg-9-12">
+    <div class="pure-g">
+    <div class="pure-u-1-3 left">
+                <a href="/notes/system"> &lt;&lt; Как организованы мои финансы </a>
+    </div>
+    <div class="pure-u-1-3 center">
+    </div>
+    <div class="pure-u-1-3 right">
+    </div>
+    </div>
+</div>
+</div>
 
         <div class="disclaimer">
             <p>Здесь я выкладываю лишь собственные размышления/исследования/расчёты, иногда собственное же изложение чужих мнений или результатов исследований. Размещённая информация может содержать ошибки, быть неактуальной на момент прочтения, допускать множество интерпретаций и проч. Я не занимаюсь образовательной деятельностью и не даю инвестиционных рекомендаций ни на этом сайте, ни в частном порядке.</p>
