--- a/pages/sources.html
+++ b/pages/sources.html
@@ -6,7 +6,6 @@
     <meta charset="utf-8" />
     <link rel="canonical" href="/pages/sources" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css" />
     <link rel="stylesheet" href="/style.css" />
     <link href="/feed.atom.xml" type="application/atom+xml" rel="alternate" title="Житейские воззрения пана Семушельского Atom Feed" />
         <meta name="description" content="Источники экономической и финансовой информации, которыми я пользуюсь и всем рекомендую. Обзоры банковских карт, надёжность банков, отчётность компаний, дивиденды, макроэкономическая статистика, и просто очень дельные фундаментальные тексты." />
@@ -36,7 +35,7 @@
                 <ul class="menu">
                         <li class="pure-menu-item"><a href="/blog" class="pure-menu-link">Сиюминутное</a></li>
                         <li class="pure-menu-item"><a href="/literacy" class="pure-menu-link">Грамотность</a></li>
-                        <li class="pure-menu-item"><a href="/pages/halava" class="pure-menu-link">Халява</a></li>
+                        <li class="pure-menu-item"><a href="/notes" class="pure-menu-link">Заметки</a></li>
                         <li class="pure-menu-item"><a href="/pages/sources" class="pure-menu-link">Источники</a></li>
                         <li class="pure-menu-item"><a href="/calculators" class="pure-menu-link">Калькуляторы</a></li>
                 </ul>
@@ -53,7 +52,7 @@
             <h1>Источники</h1>
             <div class="meta">
                     <p class="description">Источники экономической и финансовой информации, которыми я пользуюсь и всем рекомендую. Обзоры банковских карт, надёжность банков, отчётность компаний, дивиденды, макроэкономическая статистика, и просто очень дельные фундаментальные тексты.</p>
-                        <p> Обновлено: 2019-10-14 </p>
+                        <p> Обновлено: <time>2019-10-14</time> </p>
             </div>
         </header>
 
@@ -145,6 +144,15 @@
 <li><a href="http://activeinvestor.pro/">Активный инвестор</a>, <a href="https://nakhusha.livejournal.com">nakhusha</a>, <a href="https://gregbar.livejournal.com">gregbar</a>, <a href="https://zhu-s.livejournal.com">zhu-s</a>, <a href="https://borodainvestora.ru/">Борода инвестора</a>, <a href="https://at6.livejournal.com">at6</a>, <a href="https://roundabout.ru/">Вокруг да около</a>, <a href="https://rostsber.ru">Рост сбережений</a> — ещё финансовые блоги, которые я читаю.</li>
 </ul>
         </div>
+        <aside>
+                <div class="share-buttons">
+        <a href="https://vk.com/share.php?url=https://onfin.github.io/pages/sources&title=Источники&description=Источники экономической и финансовой информации, которыми я пользуюсь и всем рекомендую. Обзоры банковских карт, надёжность банков, отчётность компаний, дивиденды, макроэкономическая статистика, и просто очень дельные фундаментальные тексты." target="_blank"><i class="share">&#xea9d;</i></a>
+        <a href="https://telegram.me/share/url?url=https://onfin.github.io/pages/sources" target="_blank"><i class="share">&#xea9b;</i></a>
+        <a href="https://twitter.com/intent/tweet?text=https://onfin.github.io/pages/sources" target="_blank"><i class="share">&#xea9c;</i></a>
+        <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/pages/sources" target="_blank"><i class="share">&#xea93;</i></a>
+    </div>
+
+        </aside>
     </article>
 </div>
 </div>
