--- a/notes/index.html
+++ b/notes/index.html
@@ -61,6 +61,7 @@
 <li><a href="/notes/aboutme">Кто я и как дошёл до жизни такой</a></li>
 <li><a href="/notes/system">Как организованы мои финансы</a></li>
 <li><a href="/notes/referrals">Реферальные ссылки</a></li>
+<li><a href="/notes/accounting">Как и зачем я веду учёт личных финансов</a></li>
 </ol>
         </div>
         <aside>
