--- a/notes/referrals.html
+++ b/notes/referrals.html
@@ -174,6 +174,7 @@
     <div class="pure-u-1-3 center">
     </div>
     <div class="pure-u-1-3 right">
+                <a href="/notes/accounting"> Как и зачем я веду учёт личных финансов &gt;&gt; </a>
     </div>
     </div>
 </div>
