--- a/notes/index.html
+++ b/notes/index.html
@@ -56,7 +56,11 @@
         </header>
 
         <div class="content">
-            <h2 id="_1">Обо мне</h2>
+            <h2 id="_1">Личные финансы</h2>
+<ol>
+<li><a href="/notes/capital">Зачем нужен капитал</a></li>
+</ol>
+<h2 id="_2">Обо мне</h2>
 <ol>
 <li><a href="/notes/aboutme">Кто я и как дошёл до жизни такой</a></li>
 <li><a href="/notes/system">Как организованы мои финансы</a></li>
