--- a/notes/aboutme.html
+++ b/notes/aboutme.html
@@ -86,6 +86,7 @@
 <div class="pagination pure-u-1 pure-u-lg-9-12">
     <div class="pure-g">
     <div class="pure-u-1-3 left">
+                <a href="/notes/capital"> &lt;&lt; Зачем нужен капитал </a>
     </div>
     <div class="pure-u-1-3 center">
     </div>
