--- a/notes/index.html
+++ b/notes/index.html
@@ -59,6 +59,7 @@
             <h2 id="_1">Личные финансы</h2>
 <ol>
 <li><a href="/notes/capital">Зачем нужен капитал</a></li>
+<li><a href="/notes/recklessness">Безответственное отношение к деньгам</a></li>
 </ol>
 <h2 id="_2">Обо мне</h2>
 <ol>
