--- a/notes/capital.html
+++ b/notes/capital.html
@@ -96,7 +96,7 @@
     <div class="pure-u-1-3 center">
     </div>
     <div class="pure-u-1-3 right">
-                <a href="/notes/aboutme"> Кто я и как дошёл до жизни такой &gt;&gt; </a>
+                <a href="/notes/recklessness"> Безответственное отношение к деньгам &gt;&gt; </a>
     </div>
     </div>
 </div>
