--- a/notes/index.html
+++ b/notes/index.html
@@ -60,6 +60,7 @@
 <ol>
 <li><a href="/notes/capital">Зачем нужен капитал</a></li>
 <li><a href="/notes/recklessness">Безответственное отношение к деньгам</a></li>
+<li><a href="/notes/finplan">Личный финансовый план — не нужен</a></li>
 </ol>
 <h2 id="_2">Обо мне</h2>
 <ol>
