--- a/notes/aboutme.html
+++ b/notes/aboutme.html
@@ -86,7 +86,7 @@
 <div class="pagination pure-u-1 pure-u-lg-9-12">
     <div class="pure-g">
     <div class="pure-u-1-3 left">
-                <a href="/notes/recklessness"> &lt;&lt; Безответственное отношение к деньгам </a>
+                <a href="/notes/finplan"> &lt;&lt; Личный финансовый план — не нужен </a>
     </div>
     <div class="pure-u-1-3 center">
     </div>
