--- a/notes/recklessness.html
+++ b/notes/recklessness.html
@@ -102,7 +102,7 @@
     <div class="pure-u-1-3 center">
     </div>
     <div class="pure-u-1-3 right">
-                <a href="/notes/aboutme"> Кто я и как дошёл до жизни такой &gt;&gt; </a>
+                <a href="/notes/finplan"> Личный финансовый план — не нужен &gt;&gt; </a>
     </div>
     </div>
 </div>
